GH-101: Quick: Ensure Footer is Behind Mobile Menu

--- a/taccsite_cms/static/site_cms/css/src/_imports/trumps/s-header.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/trumps/s-header.css
@@ -224,6 +224,11 @@ Styleguide Trumps.Scopes.Header
   color: env(--header-text-color);
 }
 
+.s-header :--navbar-button:hover,
+.s-header :--navbar-button:active {
+  background-color: env(--header-link-bkgd-color);
+}
+
 /* Icon */
 .s-header :--navbar-button::before {
   font-size: 30px; /* WARNING: Do not use `rem` until `html { 62.5%; }` */
